docs/styles/global.scss
@import 'nextra-theme-docs/style.css';

article {
  scrollbar-gutter: stable both-edges;
}

:root {
  --nextra-primary-hue: 212deg;
  --nextra-primary-saturation: 100%;
  --nextra-navbar-height: 4rem;
  --nextra-menu-height: 3.75rem;
  --nextra-banner-height: 2.5rem;

  --syntax-token-component: #cb5291;
  --syntax-token-delimiter-angle: #66748E;
  --syntax-token-attribute-name: #3e5f74;
  --syntax-token-equal-sign: #2d2d2d;
  --syntax-token-string: #0074a9;
  --syntax-token-script: #02A1A1;
  --syntax-token-helper: #702e70;
  --syntax-token-comment: #0F7C54;
  --syntax-token-escape: #00B248;
  --syntax-token-constant: #708C00;
  --syntax-token-cdata: #079CF1;
  --syntax-token-delimiter-curly: #000000;
  --syntax-token-text: #4e5fb3;
}

:is(html[class~=dark]) {
  --syntax-token-component: #f472b6;
  --syntax-token-delimiter-angle: #97A7C5;
  --syntax-token-attribute-name: #acc3d3;
  --syntax-token-equal-sign: #cbd5e1;
  --syntax-token-string: #7dd3fc;
  --syntax-token-script: #78DBDB;
  --syntax-token-helper: #c775c7;
  --syntax-token-comment: #30e89f;
  --syntax-token-escape: #61F69D;
  --syntax-token-constant: #BAF80A;
  --syntax-token-cdata: #5CC1F9;
  --syntax-token-delimiter-curly: #FFFFFF;
  --syntax-token-text: #f5f5ff;

  --color-background-secondary: #121b28;
  --color-background-primary: #1e2734;

  input[type="search"]:focus {
    background-color: #121b28;
  }

  main {
    background-color: var(--color-background-primary);
  }

  div.nextra-nav-container {
    background-color: var(--color-background-primary);
  }

  .hover\:nx-text-primary-600:hover {
    --tw-text-opacity: 1;
    color: hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)45%/var(--tw-text-opacity));
}

  ul[class^='nextra-menu'], ul[class*=' nextra-menu'] li {
    > a:hover, > button:hover {
      background-color: #1c5aa02a;
    }

    > button > svg:hover {
      background-color: #1c5aa02a;
    }

    &.active {
      > a {
        background-color: transparent;
      }
    }
  }

  div.nextra-nav-container {
    background-color: transparent !important;

    div.nextra-nav-container-blur {
      background-color: color-mix(in srgb, var(--color-background-primary), transparent 10%) !important;

    }
  }

  aside.nextra-sidebar-container {
    background-color: var(--color-background-secondary);
    border-right: 1px solid #313b491f;
    overflow: visible;
    mask-image: unset;

    div.nextra-scrollbar {
      padding: 1.5rem;
    }

    div.nextra-scrollbar + div {
      background-color: #121b28;
      box-shadow: none;
    }
  }

  h1 {
    font-size: 1.875rem;
    line-height: 2.2rem;
    margin-top: 2rem;
  }

  h2 {
    font-size: 1.5rem;
    line-height: 2rem;
    margin-top: 3rem;
  }

  h3 {
    font-size: 1.25rem;
    line-height: 1.75rem;
    margin-top: 3rem;
  }

  article main {
    padding-top: 2rem;
  }

  article main p {
    margin-top: 1.25rem;
  }
}

:is(html[class~=light]) {
  ul[class^='nextra-menu'], ul[class*=' nextra-menu'] li {
    > a:hover, > button:hover {
      background-color: #004ca30c;
    }

    > button > svg:hover {
      background-color: #004ca30c;
    }

    &.active {
      > a {
        background-color: transparent;
      }
    }
  }

  aside.nextra-sidebar-container {
    background-color: #f8fafc;
    border-right: 1px solid #313b491f;
    overflow: visible;
    mask-image: unset;

    div.nextra-scrollbar {
      padding: 1.5rem;
    }

    div.nextra-scrollbar + div {
      background-color: #f8fafc;
      box-shadow: none;
    }

  }

  div.nextra-nav-container-blur {
    box-shadow: 0 0 0 1px #313b491f;
  }

  h1 {
    font-size: 1.875rem;
    line-height: 2.2rem;
    margin-top: 2rem;
  }

  h2 {
    font-size: 1.5rem;
    line-height: 2rem;
    margin-top: 3rem;
  }

  h3 {
    font-size: 1.25rem;
    line-height: 1.75rem;
    margin-top: 3rem;
  }

  article main {
    padding-top: 2rem;
  }

  article main p {
    margin-top: 1.25rem;
  }
}

:is(html[class~=light]), :is(html[class~=dark]) {
  aside.nextra-sidebar-container {
    &:before {
      content: "";
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      width: 50vw;
      z-index: -1;
      background-color: inherit;
    }
  }

  ul[class^='nextra-menu'], ul[class*=' nextra-menu'] li:has(div[data-role="separator-content"]) {
    padding-top: 20px;
    padding-bottom: 8px;
    margin-top: 0;
    margin-bottom: 0;
  }

  ul[class^='nextra-menu'], ul[class*=' nextra-menu'] li > div[data-role="separator-content"] {
    font-weight: 700;
  }

  article[class^='nextra-content'], article[class*=' nextra-content'] {
    table, thead, tbody, th, td, tr {
      border: none;
    }
  }
}

:is(html[class~=light]) {
  article[class^='nextra-content'], article[class*=' nextra-content'] {
    thead > tr {
      background-color: rgba(243,244,246, 1);
    }
    
    tr {
      border: 1px solid rgba(209,213,219, 1);
    }

    img {
      box-shadow: 0 0 24px rgba(0, 0, 0, .15);
    }
  }
}

:is(html[class~=dark]) {
  article[class^='nextra-content'], article[class*=' nextra-content'] {
    thead > tr {
      background-color: rgba(75,85,99,.2);
    }
    
    tr {
      border: 1px solid rgba(75,85,99, 1);
    }

    img {
      box-shadow: 0 0 24px rgba(0, 0, 0, .3);
    }
  }
}

html,
body,
body > div:first-child,
div#__next,
div#__next > div {
  height: 100%;
}

body {
  font-feature-settings: "cv03", "cv04", "cv11"
}

:is(html[class~=dark] .nextra-toc *) {
  background-color: var(--color-background-primary) !important;
  box-shadow: none !important;
}

:is(html[class~=dark] input:focus-visible),
:is(html[class~=light] input:focus-visible) {
  box-shadow: none !important;
}

:is(html[class~=dark] div.nextra-nav-container nav a:first-of-type:hover),
:is(html[class~=light] div.nextra-nav-container nav a:first-of-type:hover) {
  opacity: 1 !important;
}

// img {
//   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
// }

